--- a/lectures/L01/index.qmd
+++ b/lectures/L01/index.qmd
@@ -7,6 +7,7 @@ format:
   html: {}
   revealjs:
     output-file: slides.html
+  pdf: {}
 ---
 
 ::: {.content-visible when-format="html" unless-format="revealjs"}
